[gd_scene load_steps=19 format=3 uid="uid://ct2wj06r38iul"]

[ext_resource type="Script" path="res://UpgradePanel.gd" id="1_cil83"]
[ext_resource type="Theme" uid="uid://d3xlkfucuimn7" path="res://Themes/MyTheme.tres" id="2_j6fe4"]
[ext_resource type="Texture2D" uid="uid://bfpyu6ktr6o0u" path="res://Assets/progress_under_123.png" id="3_00qqc"]
[ext_resource type="Texture2D" uid="uid://b13ud28hymj10" path="res://Assets/progress_vertical_yellow.png" id="5_j6fm3"]
[ext_resource type="Texture2D" uid="uid://w3mi05t3qwk3" path="res://Assets/progress_anim_123.png" id="5_jhbqx"]
[ext_resource type="Texture2D" uid="uid://dodutmihl1csn" path="res://Assets/item_sword.png" id="6_6hr7q"]
[ext_resource type="Texture2D" uid="uid://cx8a03jh8vpo2" path="res://Assets/Boot.png" id="7_khht8"]
[ext_resource type="Texture2D" uid="uid://bqk53ub4xnocc" path="res://Assets/range.png" id="8_121h5"]
[ext_resource type="Texture2D" uid="uid://bkhvt5qn0lq2s" path="res://Assets/progress_over_3.png" id="8_bo7rt"]
[ext_resource type="Texture2D" uid="uid://dhqmp1ddkb3d7" path="res://Assets/progress_over_4.png" id="8_stpfw"]
[ext_resource type="Script" path="res://Upgrader.gd" id="9_mbcmb"]
[ext_resource type="Texture2D" uid="uid://bq0412hu76135" path="res://Assets/Shield.png" id="9_nlkln"]
[ext_resource type="Texture2D" uid="uid://dc3pjsse52ru1" path="res://Assets/heart_white.png" id="10_sji2x"]
[ext_resource type="Texture2D" uid="uid://fd3t18ylbg2a" path="res://Assets/arrow.png" id="11_y8say"]
[ext_resource type="Texture2D" uid="uid://c8qs5sie5ong8" path="res://Assets/progress_over_2.png" id="12_xu75s"]
[ext_resource type="Texture2D" uid="uid://5slno62p0s40" path="res://Assets/LongShot.png" id="16_1qsnh"]

[sub_resource type="LabelSettings" id="LabelSettings_k38d3"]
font_size = 20
font_color = Color(1, 0.862745, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vxghf"]
font_size = 20
font_color = Color(1, 0.862745, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="SelectedContainer" type="Node2D"]
position = Vector2(59.0084, -191.351)
script = ExtResource("1_cil83")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 20.8479
offset_top = 8.34659
offset_right = 380.848
offset_bottom = 308.346
theme_override_constants/h_separation = 120
theme_override_constants/v_separation = 85
columns = 4

[node name="Health" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Health"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
icon = ExtResource("10_sji2x")

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Health"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 1.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Health"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Armor" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Armor"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
icon = ExtResource("9_nlkln")

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Armor"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 4.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_over = ExtResource("8_stpfw")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Armor"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Movement" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Movement"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
icon = ExtResource("7_khht8")

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Movement"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 2.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_over = ExtResource("12_xu75s")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Movement"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Speed" type="Control" parent="GridContainer"]
layout_mode = 2
script = ExtResource("9_mbcmb")

[node name="Button" type="Button" parent="GridContainer/Speed"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
icon = ExtResource("11_y8say")

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Speed"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 3.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_over = ExtResource("8_bo7rt")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Speed"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Attack" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Attack"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
icon = ExtResource("6_6hr7q")

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Attack"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 3.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_over = ExtResource("8_bo7rt")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Attack"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Action1" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Action1"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 19
text = "SP 1"

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Action1"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 2.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_over = ExtResource("12_xu75s")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Action1"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Action2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Action2"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 99.9995
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 19
text = "SP 2"

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Action2"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 2.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_over = ExtResource("12_xu75s")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Action2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Range" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer/Range"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(50, 50)
focus_mode = 0
theme = ExtResource("2_j6fe4")
theme_type_variation = &"FlatButton"
icon = ExtResource("8_121h5")

[node name="TextureProgressBar" type="TextureProgressBar" parent="GridContainer/Range"]
layout_mode = 0
offset_left = 84.1272
offset_top = -14.4594
offset_right = 114.127
offset_bottom = 113.541
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(15, 64)
max_value = 2.0
fill_mode = 3
texture_under = ExtResource("3_00qqc")
texture_over = ExtResource("12_xu75s")
texture_progress = ExtResource("5_j6fm3")

[node name="Sprite2D" type="Sprite2D" parent="GridContainer/Range"]
modulate = Color(1, 1, 1, 0)
position = Vector2(99.0636, 50.0406)
scale = Vector2(0.55, 0.55)
texture = ExtResource("5_jhbqx")

[node name="Button" type="Button" parent="."]
offset_left = 150.924
offset_top = 226.0
offset_right = 270.924
offset_bottom = 286.0
theme = ExtResource("2_j6fe4")
text = "Deploy"

[node name="Label" type="Label" parent="."]
offset_left = 283.905
offset_top = 244.65
offset_right = 469.905
offset_bottom = 269.65
text = "SKILL POINTS: "
label_settings = SubResource("LabelSettings_k38d3")

[node name="SkillPointsLabel" type="Label" parent="."]
offset_left = 470.851
offset_top = 244.65
offset_right = 510.851
offset_bottom = 269.65
text = "99"
label_settings = SubResource("LabelSettings_vxghf")

[node name="Button2" type="Button" parent="."]
offset_left = 32.1302
offset_top = 226.0
offset_right = 152.13
offset_bottom = 286.0
theme = ExtResource("2_j6fe4")
text = "Reset"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(597.656, 144.453)
scale = Vector2(0.4, 0.4)
texture = ExtResource("16_1qsnh")
